test_suite5/ALAN/test_suite/alan-2022-examples/failing/008850_mutation.alan
source i25 function AB(boolean _0, b := 2 boolean j) begin relax end begin relax end
